Complete Login System Fix & Professional UI Enhancement
 Major Fixes:
- Fixed XML parsing error in section-selector.fxml (escaped ampersand)
- Resolved 'Error loading view' issues for all user types
- Enhanced LoginController with bulletproof authentication
- Added comprehensive fallback authentication system
- Fixed CSS parsing issues across all FXML files

 UI Improvements:
- Professional glassmorphism login design
- Modern section selector with gradient cards
- Simplified CSS for better JavaFX compatibility
- Enhanced admin and seller dashboards

 System Enhancements:
- Improved database connection handling
- Enhanced error handling and logging
- Multiple run configurations for reliability
- Comprehensive test accounts system

 New Features:
- 8 test accounts for all user types
- Detailed debug logging
- Professional documentation
- Backup CSS and FXML files

 Documentation:
- Complete fix reports and guides
- Troubleshooting documentation
- Setup and testing instructions

Ready for presentation! All login issues resolved.